--- a/app_portal_noticias/composer.json
+++ b/app_portal_noticias/composer.json
@@ -10,7 +10,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "predis/predis": "v1.1.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "v3.6.2",
